--- a/parts/header.html
+++ b/parts/header.html
@@ -1,10 +1,7 @@
 <!-- wp:group {"layout":{"type":"constrained"}} -->
-<div class="wp-block-group">
-	<!-- wp:group {"align":"wide","style":{"spacing":{"padding":{"bottom":"var:preset|spacing|40"}}},"layout":{"type":"flex","justifyContent":"space-between"}} -->
-	<div class="wp-block-group alignwide" style="padding-bottom:var(--wp--preset--spacing--40)">
-		<!-- wp:site-title {"level":0} /-->
-		<!-- wp:navigation {"layout":{"type":"flex","setCascadingProperties":true,"justifyContent":"right"}} /-->
-	</div>
+<div class="wp-block-group"><!-- wp:group {"align":"full","style":{"spacing":{"padding":{"bottom":"0"}}},"layout":{"type":"flex","flexWrap":"wrap","justifyContent":"space-between"}} -->
+	<div class="wp-block-group alignfull" style="padding-bottom:0"><!-- wp:site-title {"level":0} /-->
+
+	<!-- wp:navigation {"ref":32,"icon":"menu","layout":{"type":"flex","setCascadingProperties":true,"justifyContent":"right"}} /--></div>
+	<!-- /wp:group --></div>
 	<!-- /wp:group -->
-</div>
-<!-- /wp:group -->
